src/test/rustdoc-ui/track-diagnostics.stderr
error[E0308]: mismatched types
  --> $DIR/track-diagnostics.rs:$LINE::$COL
   |
LL | const S: A = B;
   |              ^ expected struct `A`, found struct `B`
-Ztrack-diagnostics: created at compiler/rustc_infer/src/infer/error_reporting/mod.rs:$LINE::$COL

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
